src/components/charts/tables/tables.module.css
.tableFullContainer {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

.tableContainer {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  overflow: hidden;
  box-sizing: border-box;
  background: var(--em-tablechart-header-background, #fff);
  border: var(--em-tablechart-border-width, 1px) solid var(--em-tablechart-border-color, #ededf1);
  border-radius: var(--em-tablechart-border-radius, 0.75rem);
}

.tableAdjustedContainer {
  max-width: 100%;
  max-height: 100%;
  width: fit-content;
  height: fit-content;
  overflow-x: auto;
  overflow-y: auto;
  position: relative;
  box-sizing: border-box;
  border: var(--em-tablechart-border-width, 1px) solid var(--em-tablechart-border-color, #ededf1);
  border-radius: var(--em-tablechart-border-radius, 0.75rem);
}

.tableContainerScroll {
  overflow-x: auto;
  overflow-y: hidden;
  flex: 1;
}

.tableAdjustedContainer.fullWidth {
  width: 100%;
}

.tableAdjustedContainer.fullWidth .table {
  width: 100%;
}

.table {
  width: 100%;
  border-spacing: 0;
  box-sizing: border-box;
}

.table thead {
  position: sticky;
  top: 0;
  z-index: 2;
}

.table th,
.table td {
  cursor: pointer;
  position: relative;
  box-sizing: border-box;
  padding: var(--em-tablechart-cell-padding, 0.5rem)
    calc(
      var(--em-tablechart-cell-padding, 0.5rem) + var(--em-tablechart-padding-left-right, 0.25rem)
    );
  border-bottom: var(--em-tablechart-border-width, 1px) solid
    var(--em-tablechart-border-color, #ededf1);
  border-right: var(--em-tablechart-border-width, 1px) solid
    var(--em-tablechart-border-color, #ededf1);
  height: var(--em-tablechart-cell-height, 2.5rem);
  max-height: var(--em-tablechart-cell-height, 2.5rem);
}

.table th {
  background: var(--em-tablechart-header-background, #fff);
}

.table td {
  background: var(--em-tablechart-cell-background, #fff);
}

.table thead th:last-of-type,
.table tbody td:last-of-type {
  border-right: unset;
}

.table th:hover {
  background-color: var(--em-tablechart-cell-background--hover, #f7f7f8);
}

.table tr:has(td:hover) td {
  background-color: var(--em-tablechart-cell-background--hover, #f7f7f8);
}

.table tbody tr:last-of-type th,
.table tbody tr:last-of-type td {
  border-bottom: unset;
}

/* Defaults */
.table th,
.table td {
  font-style: normal;
  font-family: var(--em-tablechart-font-family, sans-serif);
  font-size: var(--em-tablechart-font-size, 0.75rem);
  line-height: var(--em-tablechart-line-height, 0.875rem);
}

/* Header cells */
.table tr th {
  color: var(--em-tablechart-color, #212129);
  font-weight: var(--em-tablechart-font-weight--medium, 500);
}

/* Body cells */
.table tr td {
  color: var(--em-tablechart-color, #212129);
  font-weight: var(--em-tablechart-font-weight, 400);
}

/* Bolt cells */
.table .boltCell {
  color: var(--em-tablechart-color, #212129);
  font-weight: var(--em-tablechart-font-weight--bold, 700);
}

/* Muted Cells */
.table .mutedCell {
  color: var(--em-tablechart-color--muted, #5c5c66);
  font-weight: var(--em-tablechart-font-weight, 400);
}

/* Sticky first column */
.table .stickyFirstColumn {
  left: 0;
  z-index: 1;
  text-align: left;
  position: sticky;
  font-style: normal;
  pointer-events: none;
}

.stickyFirstColumn::after {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  right: calc(-1 * var(--em-tablechart-border-width, 1px));
  width: var(--em-tablechart-border-width, 1px);
  background: var(--em-tablechart-border-color, #ededf1);
}

.table {
  border-spacing: 0;
  box-sizing: content-box;
}

/* Sticky last row */
.table tbody tr.stickyLastRow {
  bottom: 0;
  top: 0;
  z-index: 1;
  position: sticky;
  font-style: normal;
  pointer-events: none;
}

.table tbody tr.stickyLastRow th::before,
.table tbody tr.stickyLastRow td::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: calc(-1 * var(--em-tablechart-border-width, 1px));
  height: var(--em-tablechart-border-width, 1px);
  background: var(--em-tablechart-border-color, #ededf1);
}

.table tbody tr.tableLastRow td {
  border-bottom: var(--em-tablechart-border-width, 1px) solid
    var(--em-tablechart-border-color, #ededf1);
}

